--- a/assets/scss/_extends.scss
+++ b/assets/scss/_extends.scss
@@ -4,3 +4,16 @@
     max-width: $ul ;
     margin: auto;
 }
+%btn-common{
+    display: block;
+    text-align: center;
+    font-size: 1.125rem;
+    letter-spacing: 0.1em;
+    transition: background-color 0.5s;
+ 
+    &:focus,
+    &:active,
+    &:hover{
+     background-color: $color-accent;
+    }
+}
