--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,5 +1,16 @@
-@mixin abs-position {
-  
+@mixin abs-position ($t: 0,$r: 0,$b: 0,$l: 0) {
+  position: absolute; 
+  top: $t;
+  right: $r;
+  bottom: $b;
+  left: $l;
+}
+
+@mixin unlist ($m: 0, $p: 0){
+  margin: $m;
+  padding: $p;
+  list-style: none;
+
 }
 
 
