--- a/assets/scss/header/_header-menu.scss
+++ b/assets/scss/header/_header-menu.scss
@@ -5,13 +5,17 @@
     left: 0;
     width: 100%;
 
-    &__container{
-     display: grid;
-     grid-template-columns: auto 1fr;
-     /*align-items: center;*/
+    @include md{
+        background-color: rgba($color-gray-dark, 0.25);
+    }
 
-     @extend %container;
+    &__container{
+        display: grid;
+        grid-template-columns: auto 1fr;
+        //align-items: center;
+
+    @extend %container;
     }
     
     
-   }
+}
